--- a/app/composer.json
+++ b/app/composer.json
@@ -8,7 +8,8 @@
         "catfan/medoo": "^1.5",
         "slim/slim": "^3.10",
         "dflydev/fig-cookies": "^1.0",
-        "firebase/php-jwt": "^5.0"
+        "firebase/php-jwt": "^5.0",
+        "symfony/yaml": "^3.4"
     },
     "autoload": {
         "psr-4": {"Guard\\": "src/"}
