--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -28,11 +28,10 @@ services:
     build: ..
     environment:
       - APP_ENV=dev
-      - CONF_FILE=/config.yaml
+      - CONF_FILE=/config/config.yaml
     image: lmorel3/guard
     volumes:
-      - ./config/database.sqlite:/database.sqlite
-      - ./config/config.yaml:/config.yaml
+      - ./config:/config
       - ./logs/guard:/var/log/guard
     ports:
       - '8081:80'
